Updated build.gradle